force-app/main/default/objects/Project__c/fields/DeadLine__c.field-meta.xml
<CustomField>
    <fullName>DeadLine__c</fullName>
    <label>DeadLine</label>
    <type>Date</type>
</CustomField>