force-app/main/default/objects/Project__c/fields/Notify_Email__c.field-meta.xml
<CustomField>
    <fullName>Notify_Email__c</fullName>
    <label>Notify Email</label>
    <type>TextArea</type>
</CustomField>