force-app/main/default/objects/Project__c/fields/Notify_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Notify_Project_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Project Manager</label>
    <type>Checkbox</type>
</CustomField>