force-app/main/default/objects/Project__c/fields/Notify_Property_Manager__c.field-meta.xml
<CustomField>
    <fullName>Notify_Property_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Property Manager</label>
    <type>Checkbox</type>
</CustomField>