force-app/main/default/objects/Project__c/fields/WOStatus__c.field-meta.xml
<CustomField>
    <fullName>WOStatus__c</fullName>
    <formula>TEXT(Work_Order__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>