force-app/main/default/objects/Project__c/validationRules/notify_email_field_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>notify_email_field_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Notify_Email__c)),
    NOT(
        REGEX(
            Notify_Email__c,
            &quot;^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}((\\s*,\\s*)[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,})*$&quot;
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Notify_Email__c</errorDisplayField>
    <errorMessage>Please enter valid email</errorMessage>
</ValidationRule>